--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.deserializer=org.apache.kafka.common.serialization.StringSerializer
-
-bootstrap.servers=localhost:9092
+bootstrap.servers=Flob.local:9092
 kafka.producer.retries=3
 kafka.linger.ms=3
 kafka.compression.type=snappy
-kafka.topic=MyPreciousTopic2
+kafka.topic=hl7
 kafka.bootstrap.servers=localhost:9092
 
-
-postgres.host=localhost
-postgres.port=5433
+postgres.host=Flob.local
+postgres.port=5432
 postgres.dbname=claimsdb
 postgres.dbuser=postgres
-postgres.password=5533528
+postgres.password=password
+query.fetch.size=1024
+
+suspicious.claims.report=/tmp/suspicious_claims.csv
